# svb

./: README.md
code/print_server/: config.yaml  print_server.py  pyproject.toml
code/simulation/: README.md  chart_generator.py  interest_calc.py  interest_rates.m  pyproject.toml  sim.py  test.m
code/svb-docker/python/: Dockerfile  README.md  pyproject.toml  requirements.txt
code/svb-docker/python/svb_web/: .gitignore  README.md  generate_new_django_secret_key.py  manage.py  pytest.ini  svb_db_init.yaml
code/svb-docker/python/svb_web/core/: admin.py  forms.py  models.py  models.py.orig  urls.py  views.py
code/svb-docker/python/svb_web/core/css/: news_editor.css
code/svb-docker/python/svb_web/core/migrations/: 0001_initial.py  0001_squashed_0014_alter_customer_costume_alter_customer_first_name_and_more.py  0002_alter_newsauthor_name.py  0003_alter_newsarticle_headline.py  0004_alter_newsarticle_date_published.py  0005_account_interest_rate.py  0006_newsarticle_body_newsarticle_preview.py  0007_customer_remove_account_account_holder_and_more.py  0007_remove_account_interest_rate_and_more.py  0008_customer_security_candy.py  0009_customer_joined_date.py  0010_alter_customer_customer_id.py  0011_remove_account_interest_rate_and_more.py  0012_rename_referrer_customer_id_customer_referrer.py  0013_receiptprinter.py  0014_alter_customer_costume_alter_customer_first_name_and_more.py  0015_account_account_name_alter_anchorevent_category.py  0016_alter_anchorevent_timestamp.py  (+8 more)
code/svb-docker/python/svb_web/svb_web/: asgi.py  models.py  settings.py  urls.py  wsgi.py
(+118 files in other folders)
