[tool.poetry]
name = "print-server"
version = "0.1.0"
description = ""
authors = ["John McNelly <jkailimcnelly@gmail.com>"]
readme = "README.md"
packages = [{include = "print_server"}]

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^306"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
