[tool.poetry]
name = "sim"
version = "0.1.0"
description = "Simulate scenarios with candy withdrawl etc."
authors = ["Jeffrey Barratt <jeffreyjbarratt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^4.2.6"
python-dotenv = "^1.0.0"
numpy = "^1.26.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
